--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center">
 
-            <h1 class="logo me-auto"><a href="index.html">Gravataí no South Summit</a></h1>
+            <h1 class="logo me-auto"><a href="index.html">Gravataí/RS Brasil <img src="./assets/img/southsummit.png" alt=""></a></h1>
             <div>
                 <!-- <img src="./assets/img/Capa_southSumm.jpg" alt=""> -->
             </div>
@@ -94,12 +94,13 @@
                     <h1>"(...) Gravataí a Melhor cidade para morar e investir"</h1>
                     <h2>Prefeito Luiz Zaffalon</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
-                        <a href="#about" class="btn-get-started scrollto">Get Started</a>
+                        <a href="#about" class="btn-get-started scrollto">Saber mais...</a>
                         <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-                    <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+                    <!--assets/img/hero-img.png -->
+                    <img src="assets/img/Prefeito_south.jpeg" class="img-fluid animated" alt="">
                 </div>
             </div>
         </div>
