--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="assets/img/prefeitura.png" class="img-fluid" alt="">
+                        <img src="assets/img/prefeitura2.png" class="img-fluid" alt="">
                     </div>
 
                 </div>
@@ -258,7 +258,7 @@
                         <div class="skills-content">
 
                             <div class="progress">
-                                <span class="skill">Indústria Metal mecânica <i class="val">100%</i></span>
+                                <span class="skill">Indústria Metal mecânica <i class="val">95%</i></span>
                                 <div class="progress-bar-wrap">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
