--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
     </header>
     <!-- End Header -->
-
+    <!--  -->
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex align-items-center">
 
@@ -318,14 +318,15 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="100">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bi-gear-wide"></i></div>
                             <h4><a href="">Indústria 4.0</a></h4>
                             <p></p>
                         </div>
                     </div>
-
+                    <br>
+                    <br>
                     <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                         <div class="icon-box">
                             <div class="icon"><i class="bx bxl-digitalocean"></i></div>
@@ -378,11 +379,12 @@
 
                 <div class="row">
                     <div class="col-lg-9 text-center text-lg-start">
-                        <h3>Call To Action</h3>
+                        <h3>Conheça Gravataí</h3>
                         <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                     <div class="col-lg-3 cta-btn-container text-center">
-                        <a class="cta-btn align-middle" href="#">Call To Action</a>
+                        <a class="cta-btn align-middle" href="https://gravatai.atende.net/cidadao">Conheça Gravataí</a>
+                        <img src="./assets/img/Prefeito.png" alt="">
                     </div>
                 </div>
 
@@ -596,7 +598,7 @@
 
         <!-- ======= Pricing Section ======= -->
 
-        <section id="pricing" class="pricing">
+        <!-- <section id="pricing" class="pricing">
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
@@ -655,13 +657,13 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
         <!-- End Pricing Section -->
 
 
 
         <!-- ======= Frequently Asked Questions Section ======= -->
-        <section id="faq" class="faq section-bg">
+        <!-- <section id="faq" class="faq section-bg">
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
@@ -723,7 +725,7 @@
                 </div>
 
             </div>
-        </section>
+        </section> -->
         <!-- End Frequently Asked Questions Section -->
 
         <!-- ======= Contact Section ======= -->
