--- a/index.html
+++ b/index.html
@@ -733,9 +733,8 @@
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h2>Contact</h2>
-                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
-                        quidem hic quas.</p>
+                    <h2>Contato</h2>
+                    <p>Para mais informações sobre nossa cidade, siga em nossas redes sociais.</p>
                 </div>
 
                 <div class="row">
@@ -744,24 +743,28 @@
                         <div class="info">
                             <div class="address">
                                 <i class="bi bi-geo-alt"></i>
-                                <h4>Location:</h4>
-                                <p>A108 Adam Street, New York, NY 535022</p>
+                                <h4>Localização:</h4>
+                                <p>Avenida DR. JOSE LOUREIRO DA SILVA, Nº 1350, CENTRO - Gravataí/RS</p>
                             </div>
 
                             <div class="email">
                                 <i class="bi bi-envelope"></i>
                                 <h4>Email:</h4>
-                                <p>info@example.com</p>
+                                <p>gp.ouvidoria@gravatai.rs.gov.br</p>
                             </div>
 
                             <div class="phone">
                                 <i class="bi bi-phone"></i>
-                                <h4>Call:</h4>
-                                <p>+1 5589 55488 55s</p>
+                                <h4>Telefone:</h4>
+                                <p>+55 51 3600-7001</p>
                             </div>
 
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0"
-                                style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3457.2551210388974!2d-50.996077984820815!3d-29.943339533541945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95190b3e60fc2c4b%3A0x5ae59ba92dbe9f5!2sAv.%20Jos%C3%A9%20Loureiro%20da%20Silva%2C%201350%20-%20Centro%2C%20Gravata%C3%AD%20-%20RS%2C%2094010-000!5e0!3m2!1spt-BR!2sbr!4v1653588366765!5m2!1spt-BR!2sbr"
+                                frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+
+
+
+
                         </div>
 
                     </div>
@@ -770,20 +773,20 @@
                         <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                             <div class="row">
                                 <div class="form-group col-md-6">
-                                    <label for="name">Your Name</label>
+                                    <label for="name">Seu nome</label>
                                     <input type="text" name="name" class="form-control" id="name" required>
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <label for="name">Your Email</label>
+                                    <label for="name">Seu Email</label>
                                     <input type="email" class="form-control" name="email" id="email" required>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="name">Subject</label>
+                                <label for="name">Assunto</label>
                                 <input type="text" class="form-control" name="subject" id="subject" required>
                             </div>
                             <div class="form-group">
-                                <label for="name">Message</label>
+                                <label for="name">Mensagem</label>
                                 <textarea class="form-control" name="message" rows="10" required></textarea>
                             </div>
                             <div class="my-3">
@@ -791,7 +794,7 @@
                                 <div class="error-message"></div>
                                 <div class="sent-message">Your message has been sent. Thank you!</div>
                             </div>
-                            <div class="text-center"><button type="submit">Send Message</button></div>
+                            <div class="text-center"><button type="submit">Enviar Mensagem</button></div>
                         </form>
                     </div>
 
@@ -807,7 +810,7 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
 
-        <div class="footer-newsletter">
+        <!-- <div class="footer-newsletter">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-6">
@@ -819,33 +822,33 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="footer-top">
             <div class="container">
                 <div class="row">
 
                     <div class="col-lg-3 col-md-6 footer-contact">
-                        <h3>Arsha</h3>
+                        <h3>Prefeitura de Gravataí</h3>
                         <p>
-                            A108 Adam Street <br> New York, NY 535022<br> United States <br><br>
-                            <strong>Phone:</strong> +1 5589 55488 55<br>
-                            <strong>Email:</strong> info@example.com<br>
+                            Av. Dr. José Loureiro da Silva, 1350<br> Centro - Gravataí/RS 94.010-000<br> Brasil <br><br>
+                            <strong>Telefone:</strong> +55 51 3600 7001<br>
+                            <strong>Email:</strong> gp.ouvidoria@gravatai.rs.gov.br<br>
                         </p>
                     </div>
 
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
+                    <!-- <div class="col-lg-3 col-md-6 footer-links">
+                        <h4>Links Úteis</h4>
+                        <!-- <ul>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-                        </ul>
-                    </div>
+                        </ul> -->
+                </div>
 
-                    <div class="col-lg-3 col-md-6 footer-links">
+                <!-- <div class="col-lg-3 col-md-6 footer-links">
                         <h4>Our Services</h4>
                         <ul>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -854,34 +857,33 @@
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
                         </ul>
-                    </div>
+                    </div> -->
 
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Our Social Networks</h4>
-                        <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
-                        <div class="social-links mt-3">
-                            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                        </div>
-                    </div>
+                <div class="col-lg-3 col-md-6 footer-links">
+                    <h4>Siga-nos em nossas redes sociais</h4>
 
+                    <div class="social-links mt-3">
+                        <a href="https://twitter.com/prefgravatai_" class="twitter"><i class="bx bxl-twitter"></i></a>
+                        <a href="https://www.facebook.com/prefeituradegravatai" class="facebook"><i class="bx bxl-facebook"></i></a>
+                        <a href="https://www.instagram.com/prefgravatai/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/prefeitura-municipal-de-gravata-/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                    </div>
                 </div>
+
             </div>
+        </div>
         </div>
 
         <div class="container footer-bottom clearfix">
             <div class="copyright">
-                &copy; Copyright <strong><span>Arsha</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>SMICT</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
                 <!-- All the links in the footer should remain intact. -->
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                Designed by <a href="https://bootstrapmade.com/">SMICT - Prefeitura de Gravataí/RS</a>
             </div>
         </div>
     </footer>
