--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="row" data-aos="zoom-in">
 
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="assets/img/gm.png" class="img-fluid" alt="">
+                        <img src="assets/img/prefeitura2.png" class="img-fluid" alt="">
                     </div>
 
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
@@ -129,7 +129,7 @@
                     </div>
 
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="assets/img/Gravatai2031.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/tecnosinos.png" class="img-fluid" alt="">
                     </div>
 
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-                        <img src="assets/img/prefeitura2.png" class="img-fluid" alt="">
+                        <img src="assets/img/Gravatai2031.jpg" alt="">
                     </div>
 
                 </div>
@@ -380,7 +380,7 @@
                 <div class="row">
                     <div class="col-lg-9 text-center text-lg-start">
                         <h3>Conheça Gravataí</h3>
-                        <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Gravataí fica a 32 Kms de Porto Alegre, 15 minutos do aeroporto<br> internacional Salgado Filho, próximo das melhores universidades<br>do país. Venha construir um novo futuro conosco.</p>
                     </div>
                     <div class="col-lg-3 cta-btn-container text-center">
                         <a class="cta-btn align-middle" href="https://gravatai.atende.net/cidadao">Conheça Gravataí</a>
