--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
                     <h2>Prefeito Luiz Zaffalon</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a href="#about" class="btn-get-started scrollto">Saber mais...</a>
-                        <a href="https://drive.google.com/file/d/1V3jh03lHxV8yM9dRW-FRSGYV3Qp3MwaU/view" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Assista o Video</span></a>
+                        <a href="https://drive.google.com/file/d/1V3jh03lHxV8yM9dRW-FRSGYV3Qp3MwaU/preview" allow="autoplay" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Assista o Video</span></a>
+
+
+
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
