--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <h2>Prefeito Luiz Zaffalon</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a href="#about" class="btn-get-started scrollto">Saber mais...</a>
-                        <a href="../South_Grava.m4v" allow="autoplay" class="glightbox btn-watch-video" download="false"><i class="bi bi-play-circle"></i><span>Assista o Video</span></a>
+                        <a href="../South_Grava.m4v" allow="autoplay" preload="true" class="glightbox btn-watch-video" download="false"><i class="bi bi-play-circle"></i><span>Assista o Video</span></a>
 
 
 
