--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
                     <h2>Prefeito Luiz Zaffalon</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a href="#about" class="btn-get-started scrollto">Saber mais...</a>
-                        <a href="../South_Grava.m4v" allow="autoplay" preload="true" class="glightbox btn-watch-video" download="false"><i class="bi bi-play-circle"></i><span>Assista o Video</span></a>
+                        <a href="../South_Grava.mp4" allow="autoplay" preload="true" class="glightbox btn-watch-video" download="false"><i class="bi bi-play-circle"></i><span>Assista o Video</span></a>
 
 
 
                     </div>
-            </div>
+                </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
                     <!--assets/img/hero-img.png -->
                     <img src="assets/img/Prefeito_south.jpeg" class="img-fluid animated" alt="">
