--- a/index.html
+++ b/index.html
@@ -402,105 +402,105 @@
 
                 <div class="section-title">
                     <h2>Portfolio</h2>
-                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
-                        quidem hic quas.</p>
+                    <p>Gravataí a 4ª maior arrecadação do Estado do Rio Grande do Sul vem trablhando para trazer mais qualidade para a cidade, buscando investidores, novas empresas, Startups, modernizando a cidade os serviços e os processsos, investindo
+                        em capacitação e na inovação da cidade, um plano de governo forte e comprometido com desenvolvimento de Inovação, Ciência, Pesquisa e tecnologia.</p>
                 </div>
 
                 <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-                    <li data-filter="*" class="filter-active">All</li>
-                    <li data-filter=".filter-app">App</li>
-                    <li data-filter=".filter-card">Card</li>
-                    <li data-filter=".filter-web">Web</li>
+                    <li data-filter="*" class="filter-active">Todas</li>
+                    <li data-filter=".filter-app">Buscando soluções</li>
+                    <li data-filter=".filter-card">Setor Público & Privado</li>
+                    <li data-filter=".filter-web">Investindo em qualificação</li>
                 </ul>
 
                 <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-img"><img src="assets/img/portfol_4.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
-                            <h4>App 1</h4>
-                            <p>App</p>
-                            <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
+                            <h4>Investimentos</h4>
+                            <p>Investimentos</p>
+                            <a href="assets/img/portfol_4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Investimentos"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-img"><img src="assets/img/portfol_14.jpg " class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
-                            <h4>Web 3</h4>
-                            <p>Web</p>
-                            <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+                            <h4>Busca por excelência</h4>
+                            <p>Busca por excelência</p>
+                            <a href="assets/img/portfol_14.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Busca"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-img"><img src="assets/img/portfol_2.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
-                            <h4>App 2</h4>
-                            <p>App</p>
-                            <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
+                            <h4>Engajamento</h4>
+                            <p>Engajamento da Equipe</p>
+                            <a href="assets/img/portfol_2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Engajamento"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-img"><img src="assets/img/portfol_6.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
-                            <h4>Card 2</h4>
-                            <p>Card</p>
-                            <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
+                            <h4>Parceria com setor privado</h4>
+                            <p>Setor da indústria</p>
+                            <a href="assets/img/portfol_6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Setor indústria"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-img"><img src="assets/img/portfol_12.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
-                            <h4>Web 2</h4>
-                            <p>Web</p>
-                            <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
+                            <h4>Qualificando as pessoas</h4>
+                            <p>Qualificando</p>
+                            <a href="assets/img/portfol_12.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Qualificando"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                        <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-img"><img src="assets/img/portfol_5.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
-                            <h4>App 3</h4>
-                            <p>App</p>
-                            <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
+                            <h4>Participação em ambiente inovador</h4>
+                            <p>Participação em ambiente inovador</p>
+                            <a href="assets/img/portfol_5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Participação em ambiente inovador"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-img"><img src="assets/img/portfol_13.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
-                            <h4>Card 1</h4>
-                            <p>Card</p>
-                            <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 1"><i class="bx bx-plus"></i></a>
+                            <h4>Geração de empregos</h4>
+                            <p>Novos empregos</p>
+                            <a href="assets/img/portfol_13.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Empregos"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                        <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-img"><img src="assets/img/portfol_15.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
-                            <h4>Card 3</h4>
-                            <p>Card</p>
-                            <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 3"><i class="bx bx-plus"></i></a>
+                            <h4>União</h4>
+                            <p>União dos Municípios</p>
+                            <a href="assets/img/portfol_15.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Público & Privado"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                        <div class="portfolio-img"><img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-img"><img src="assets/img/portfol_10.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
-                            <h4>Web 3</h4>
-                            <p>Web</p>
-                            <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
+                            <h4>Equipando a Educação</h4>
+                            <p>Oferecendo educação de ponta</p>
+                            <a href="assets/img/portfol_10.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Tecnologia na educação"><i class="bx bx-plus"></i></a>
                             <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
