--- a/index.html
+++ b/index.html
@@ -506,6 +506,20 @@
                     </div>
 
                 </div>
+                <br>
+                <br>
+                <div class="section-title">
+                    <h2>Apoio</h2>
+                    <p>Granpal - Associação dos Municípios da Região Metropolitana de Porto Alegre
+                        <p>
+                            <br>
+                            <br>
+                            <div>
+                                <img src="assets/img/qr_code_granpal.png" alt="" width="20%">
+                                <img src="assets/img/book_granpal.png" alt="" width="15%">
+                            </div>
+                </div>
+
 
             </div>
         </section>
