--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <h2>Prefeito Luiz Zaffalon</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <a href="#about" class="btn-get-started scrollto">Saber mais...</a>
-                        <a href="../south_grava.mp4" allow="autoplay" preload="" class="glightbox btn-watch-video" type="video/mp4"><i class="bi bi-play-circle"></i><span>Assista o Video</span></a>
+                        <a href="../south_summit_grav.mp4" allow="autoplay" preload="" class="glightbox btn-watch-video" type="video/mp4"><i class="bi bi-play-circle"></i><span>Assista o Video</span></a>
 
 
 
