--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
             </nav>
             <!-- .navbar -->
 
+            <div id="google_translate_element"></div>
+            <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=gogleTranslateElementInit"></script>
+            <script type="text/javascript">
+                function googleTranslateElementInit(){
+
+                new google.translate.TranslateElement({pageLanguage: 'en'},
+                'google_translate_element');
+                    
+                }
+            </script>
+
+
         </div>
     </header>
     <!-- End Header -->
