--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="utf-8">
@@ -29,6 +29,10 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 
+    <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+    <script type="text/javascript" src="js/tradutor.js"></script>
+
+
     <!-- =======================================================
   * Template Name: Arsha - v4.7.1
   * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
@@ -38,6 +42,11 @@
 </head>
 
 <body>
+
+
+
+
+
 
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top ">
@@ -78,23 +87,30 @@
                     <li><a class="nav-link scrollto" href="#contact">Contatos</a></li>
                     <li><a class="getstarted scrollto" href="#about">Vamos lá!!!</a></li>
                 </ul>
+
+
+                <ul class="nav">
+                    <li>
+                        <!-- <a href="javascript:;" class="pt" onclick="ChangeLang('pt')" title="Traduzir para português"><img src="./assets/img/pt.PNG" /></a> -->
+                    </li>
+
+                    <li>
+                        <a href="index_en.html" class="en" onclick="ChangeLang('en')" title="Translate to English"><img src="./assets/img/en.PNG" /></a>
+                    </li>
+
+                </ul>
+
+
+
+
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
             <!-- .navbar -->
-
-            <div id="google_translate_element"></div>
-            <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=gogleTranslateElementInit"></script>
-            <script type="text/javascript">
-                function googleTranslateElementInit(){
-
-                new google.translate.TranslateElement({pageLanguage: 'en'},
-                'google_translate_element');
-                    
-                }
-            </script>
-
-
         </div>
+
+
+
+
     </header>
     <!-- End Header -->
     <!--  -->
@@ -125,6 +141,13 @@
     <!-- End Hero -->
 
     <main id="main">
+
+        <div class="main">
+            <div id="google_translate_element"></div>
+            <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"></script>
+
+        </div>
+
 
         <!-- ======= Clients Section ======= -->
         <section id="clients" class="clients section-bg">
